[gd_scene load_steps=16 format=3 uid="uid://yg4vuc08pan4"]

[ext_resource type="Script" uid="uid://cqf45o0vkepgi" path="res://Scenes/witch.gd" id="1_rrl02"]
[ext_resource type="Shader" uid="uid://2auxmwafr4ty" path="res://Scenes/flicker.gdshader" id="2_d6wki"]
[ext_resource type="Texture2D" uid="uid://bq0v4iloig2ei" path="res://graphics/Enemies/BOSS/witchattak2.png" id="3_hjh8c"]
[ext_resource type="Texture2D" uid="uid://bf4vf0jt6hlih" path="res://graphics/Enemies/BOSS/witch walk 2x1.png" id="3_un8x1"]
[ext_resource type="Texture2D" uid="uid://dih7jst5k8gg4" path="res://graphics/Enemies/BOSS/witch-sheet.png" id="4_p42pi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hjh8c"]
resource_local_to_scene = true
shader = ExtResource("2_d6wki")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/amount = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_l7v3h"]
atlas = ExtResource("4_p42pi")
region = Rect2(0, 0, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_w358o"]
atlas = ExtResource("4_p42pi")
region = Rect2(28, 0, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_p42pi"]
atlas = ExtResource("3_un8x1")
region = Rect2(0, 0, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_whpry"]
atlas = ExtResource("3_un8x1")
region = Rect2(29, 0, 28, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_l7v3h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_hjh8c")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7v3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w358o")
}],
"loop": true,
"name": &"stand",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p42pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whpry")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w358o"]
radius = 6.0
height = 32.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wv0bi"]
size = Vector2(16, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_muxnv"]
size = Vector2(1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s6jde"]
size = Vector2(1, 1)

[node name="Witch" type="Area2D"]
collision_layer = 4
collision_mask = 18
script = ExtResource("1_rrl02")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_hjh8c")
position = Vector2(1, -4)
sprite_frames = SubResource("SpriteFrames_l7v3h")
animation = &"attack"
autoplay = "walk"
frame_progress = 0.0379947
flip_h = true

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(1, -3)
shape = SubResource("CapsuleShape2D_w358o")

[node name="BorderArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BorderArea2D"]
shape = SubResource("RectangleShape2D_wv0bi")

[node name="RightCliffArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightCliffArea"]
position = Vector2(6, 11)
shape = SubResource("RectangleShape2D_muxnv")

[node name="LeftCliffArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftCliffArea"]
position = Vector2(-6, 11)
shape = SubResource("RectangleShape2D_s6jde")

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -8.0
offset_top = -21.0
offset_right = 28.0
offset_bottom = -15.0
scale = Vector2(0.5, 0.5)
show_percentage = false

[node name="regin_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Fireball_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="movement" type="Timer" parent="."]

[node name="CooldownBar" type="ProgressBar" parent="."]
visible = false
modulate = Color(0.7873402, 0.7485401, 0.7366042, 1)
offset_left = -5.0
offset_top = -17.0
offset_right = 19.0
offset_bottom = -13.0
scale = Vector2(0.5, 0.5)
show_percentage = false

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="BorderArea2D" to="." method="_on_border_area_2d_body_entered"]
[connection signal="body_entered" from="RightCliffArea" to="." method="_on_right_cliff_area_body_entered"]
[connection signal="body_exited" from="RightCliffArea" to="." method="_on_right_cliff_area_body_exited"]
[connection signal="body_entered" from="LeftCliffArea" to="." method="_on_left_cliff_area_body_entered"]
[connection signal="body_exited" from="LeftCliffArea" to="." method="_on_left_cliff_area_body_exited"]
[connection signal="timeout" from="Fireball_timer" to="." method="_on_fireball_timer_timeout"]
[connection signal="timeout" from="movement" to="." method="_on_movement_timeout"]
